@@ -1,3 +1,6 @@
+[B]Version v2.4.9[/B]
+- Added VideoPress stream resolver.
+
 [B]Version v2.4.8[/B]
 - Fixed google docs stream resolver.
 
